--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,5 +14,6 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+        <script src="assets/js/bootstrat.min.js"></script>
     </body>
 </html>
